# prb.py

./: .gitlab-ci.yml  ReadMe.md  prb.py  pyproject.toml  tutorial.ipynb
.github/workflows/: CI.yml
tests/: mafia_2.prb  tests.py
